--- a/src/scss/bestagon.scss
+++ b/src/scss/bestagon.scss
@@ -3,6 +3,8 @@ $height-to-width-ratio: 0.8660254;
 :root {
   --bestagon-gap: 0.8rem;
   --bestagon-size: 14rem;
+  --bestagon-border-size: 2px;
+  --bestagon-border-color: black;
 }
 
 .bestagon-rows,
@@ -21,14 +23,20 @@ $height-to-width-ratio: 0.8660254;
   gap: var(--bestagon-gap);
 
   .bestagon-cell,
-  .bestagon-space {
+  .bestagon-space,
+  .bestagon-border {
     flex-shrink: 0;
     width: var(--bestagon-size-a);
     height: var(--bestagon-size);
   }
 
-  .bestagon-cell {
+  .bestagon-cell,
+  .bestagon-border {
     clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
+  }
+
+  .bestagon-border {
+    padding: calc(var(--bestagon-border-size) / $height-to-width-ratio) var(--bestagon-border-size);
   }
 }
 
@@ -54,14 +62,20 @@ $height-to-width-ratio: 0.8660254;
   gap: var(--bestagon-gap);
 
   .bestagon-cell,
-  .bestagon-space {
+  .bestagon-space,
+  .bestagon-border {
     flex-shrink: 0;
     width: var(--bestagon-size);
     height: var(--bestagon-size-a);
   }
 
-  .bestagon-cell {
+  .bestagon-cell,
+  .bestagon-border {
     clip-path: polygon(0% 50%, 25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%);
+  }
+
+  .bestagon-border {
+    padding: var(--bestagon-border-size) calc(var(--bestagon-border-size) / $height-to-width-ratio);
   }
 }
 
@@ -81,12 +95,25 @@ $height-to-width-ratio: 0.8660254;
 }
 
 .bestagon-cell {
+  box-sizing: border-box;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  text-align: center;
 }
 
 .bestagon-space {
   visibility: hidden;
+}
+
+.bestagon-border {
+  box-sizing: border-box;
+  background-color: var(--bestagon-border-color);
+}
+
+.bestagon-border .bestagon-cell,
+.bestagon-border .bestagon-border {
+  width: 100%;
+  height: 100%;
 }
